Clean up AbstractUntypedPersistentActor
Fix the two suppressions we have by using a private Logger. We also
rehost persistenceId() from RaftAftor and use it consistently in
messages.

Change-Id: Ie8c2f2e414a396060eee5aa7e16975ff5514e972
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>